2012-03-23 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-06-31
	* Temporary disable "Import from python" option in the MenuBar. (to deploy the app.)
	* Improvements in Jpython parser.
	- Create nested Pset structures.
	- Take into account the names of the Psets, update pset parameters when they exist, added when needed.
	
2012-03-22 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-06-30
	* Update connection setup for Online database. (Andrea).
	* Improvements in Jpython parser.
	- Fix problem with brackets coming from vectors.
	- Create Streams/OutputModules/EventContents based on OutputModules.
	- Create and organise paths in Datasets when possible.
	- Improve console messages.
	
2012-03-22 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-06-29
	* Implements Serializable Classes to improve the browser performance. (Ulf)
	* disk cache + statistics for the browser. (Ulf).

2012-03-18 Martin Grunewald  <Martin.Grunewald@cern.ch>
	* tag V01-06-28 improved color-coding of EventConetnt commands

2012-03-16 Martin Grunewald  <Martin.Grunewald@cern.ch>
	* tag V01-06-27 fix operator(IGNORE,NEGATE) for "replace" actions

2012-03-16 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-06-26
	* Improvements in Jpython parser.
	- Allow to parse .py and compiled files .pyc.
	- Include option to ignore prescales service. (this avoid the Java method size error).
	- Includes Datasets and Streams.
	- Set empty strings to "" by default.
	- Set uint64 in HEX by default.

2012-03-13 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-06-25
	* Fix the .classpath file.
	
2012-03-09 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-06-24
	* Include some clarifications for developers at README.txt
	
2012-03-09 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-06-23
	* Update build.xml to include /python source folder in cmssw-evf-confdb-gui.jar